# cm-trpl

./: .gitignore  README.md
chapter-01/: README.md
chapter-02/: README.md
chapter-03/guessing_game/: Cargo.toml
chapter-04/: 4_1_memo.md  4_2_memo.md
chapter-05/: 5_1-3_memo.md
chapter-05/newtype-pattern-example/: Cargo.toml  newtype.rs  type_alias.rs
chapter-06/6-2_match/: 6-2_3-memo.md  Cargo.toml
chapter-06/enum-usage/: Cargo.toml
chapter-07/: README.md
chapter-07/7-2_control-scope/: Cargo.toml
chapter-07/7-3_use-other-modules/: Cargo.toml
chapter-08/: 8.1-vector.md  8.2-Strings.ipynb  8.3-HashMaps.ipynb
chapter-08/vector/: Cargo.toml
chapter-09/: README.md
chapter-10/: 10_2_memo.md
chapter-10/by-function/: Cargo.toml
chapter-10/by-generics/: Cargo.toml
chapter-10/generic-struct/: Cargo.toml
chapter-12/minigrep/: Cargo.toml
chapter-13/closure/: Cargo.toml
chapter-14/opt-level/: Cargo.toml
chapter-14/re-export/: Cargo.toml
chapter-15/circular-refrences/: Cargo.toml  Dockerfile
chapter-15/deref/: Cargo.toml
chapter-15/drop/: Cargo.toml
chapter-15/heap/: Cargo.toml
chapter-15/rc/: Cargo.toml
chapter-15/refcell/: Cargo.toml
chapter-16/channel-example/: Cargo.toml
chapter-16/mutex-example/: Cargo.toml
chapter-16/thread-example/: :w  Cargo.toml
chapter-17/extend-example/: Cargo.toml
chapter-17/gui/: Cargo.toml
chapter-17/trait-object/: Cargo.toml
chapter-18/too-many-matches/: Cargo.toml
chapter-19/advanced-functions/: Cargo.toml
chapter-19/advanced-lifetime/: Cargo.toml  main-struct-based.ll  (+1 more)
(+70 files in other folders)
