[package]
name = "newtype-pattern-example"
version = "0.1.0"
authors = [""]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name  = "type_alias"
path = "type_alias.rs"

[[bin]]
name  = "newtype"
path = "newtype.rs"

